--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.5.1",
     "react-simplemde-editor": "^3.6.22",
+    "react-sticky-footer": "0.1.0-rc3",
     "react-typography": "^0.16.18",
     "simplemde": "^1.11.2",
     "typography": "^0.16.18",
