--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-typography": "^2.2.4",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
+    "radium": "^0.25.1",
     "react": "^16.5.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.5.1",
@@ -25,6 +26,7 @@
     "react-sticky-footer": "0.1.0-rc3",
     "react-typography": "^0.16.18",
     "simplemde": "^1.11.2",
+    "styled-components": "^4.1.3",
     "typography": "^0.16.18",
     "typography-theme-kirkham": "^0.16.18"
   },
