--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "gatsby-transformer-remark": "^2.1.17",
     "radium": "^0.25.1",
     "react": "^16.5.1",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datepicker": "^2.0.0",
     "react-datetime": "^2.16.3",
+    "react-datetime-picker": "^2.1.1",
     "react-dom": "^16.5.1",
     "react-simplemde-editor": "^3.6.22",
     "react-sticky-footer": "0.1.0-rc3",
