--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.5",
+    "fs": "0.0.1-security",
     "gatsby": "^2.0.76",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-typography": "^2.2.4",
